# voice_cloning_agent

agent-starter-react-main/: .gitignore  ENV_TEMPLATE.txt  README.md  app-config.ts
agent-starter-react-main/.github/workflows/: build-and-test.yaml
voice_cloning_agent/: .gitignore
voice_cloning_agent/agent-starter-python-main/: .gitignore  ENV_TEMPLATE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  test_agent.py  test_speechify_list_and_sample.py  test_speechify_upload.py
voice_cloning_agent/agent-starter-python-main/src/: agent.py  assembly_client.py  openai_client.py  speechify_client.py  speechify_tts.py  utils.py
voice_cloning_agent/agent-starter-python-main/src/dump/: agent.py  agent_speechify.py  elevenlabs_tts.py  recording_utils.py  services.py  speechify_service.py  speechify_tts.py  voice_clone_manager.py
